# chrome_hold

./: Cargo.toml  chromeHoldService.xml  chrome_hold.xml  start_release.sh
.github/workflows/: windows.yml
src/: lib.rs  main.rs
