[package]
name = "chrome_hold"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender="0.2"
serde_json = { version = "1" }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }